# muSickBeets

./: .gitignore  AGENTS.md  BIG_PICKLE_NOTES_PERF_AND_BUGS.md  CATEGORIZED_ISSUES.md  CLAUDE.md  CODING_RULES.md  Cargo.toml  HISTORY.md  LICENSE  MINI_MAX_NOTES_PERF_AND_BUGS.md  NEXT_STEPS.md  NOISE_MAKER_PROGRESS.md  PLAN_TRACKER.md  PROGRESS.md  README.md  RECONSTRUCTION_AUDIT.md  SINGLE_FRAME_FFT_NOTES.md  THIRD_PARTY_LICENSES.md  TRINITY_NOTES_PERF_AND_BUGS.md  ai_memory.md  bigpickle-session-ses_36eb.md  claude-session-ses_36e5.md  claude_opus_NOTES_PERF_AND_BUGS.md  claude_opus_new_finds_NOTES_PERF_AND_BUGS.md  documentation.md  log.md  map.md  minimax-session-ses_36e7.md  settings.ini  skeleton_map.md  system_injected_agent.md  trinity-session-ses_36e7.md  variables.md  vnc_input_testing.md
assets/: Tracker_Synth_Command_Reference.docx  Tracker_Synth_Command_Reference.txt  big.fftframe  small.fftframe  song.csv  test_demo.csv
fft/: 123.fft  du.fft
fftframes/: 123..fftframe  Oooo140hz.fftframe  Oooo200hz.fftframe  du.fftframe  du2.fftframe  wisl740hz.fftframe
src/: effects_legacy.rs  instruments.rs  main.rs  main_gui.rs  parser.rs  test.txt  test2.txt
src/effects/: mod.rs
src/fft_analyzer/: app_state.rs  audio_loader.rs  audio_player.rs  audio_reconstructor.rs  callbacks_draw.rs  callbacks_file.rs  callbacks_nav.rs  callbacks_ui.rs  color_lut.rs  csv_export.rs  debug_flags.rs  fft_analyzer_documentation.md  fft_engine.rs  fft_params.rs  frame_export.rs  gradient_editor.rs  layout.rs  layout_sidebar.rs  main_fft.rs  mod.rs  poll_loop.rs  settings.rs  spectrogram.rs  spectrogram_renderer.rs  test_audio_gen.rs  validation.rs
src/fft_analyzer/data/: audio_data.rs  fft_params.rs  mod.rs  segmentation_solver.rs  spectrogram.rs  view_state.rs
src/fft_analyzer/playback/: audio_player.rs
src/fft_analyzer/processing/: fft_engine.rs  mod.rs  reconstructor.rs  waveform_cache.rs
src/fft_analyzer/rendering/: color_lut.rs  mod.rs  spectrogram_renderer.rs  waveform_renderer.rs
src/fft_analyzer/ui/: mod.rs  theme.rs  tooltips.rs
src/noise_maker/: app_state.rs  audio_gene.rs  callbacks_draw.rs  callbacks_file.rs  callbacks_nav.rs  frame_file.rs  layout.rs  main.rs  poll_loop.rs  settings.rs  synth.rs
src/tracker/: audio.rs  channel.rs  documentation.md  engine.rs  envelope.rs  helper.rs  instruments.rs  main.rs  master_bus.rs  parser.rs
src/tracker/effects/: core.rs  dynamics.rs  filters.rs  mod.rs  modulation.rs  processor.rs  spatial.rs  state.rs
