[package]
name = "muSickBeets"
version = "0.1.0"
edition = "2024"
description = "A CSV-driven music tracker synthesizer with real-time audio synthesis"
authors = ["Jon Stokes ( mightey man )"]
default-run = "tracker"


[[bin]]
name = "tracker"
path = "src/main.rs"


[[bin]]
name = "gui"
path = "src/main_gui.rs"


[dependencies]

# Error handling - provides better error messages and context
anyhow = "1.0.100"

# GUI framework - fast, lightweight, cross-platform
# Note: Made optional in dev environment - requires Xft library
# let's keep this commented out until I get to that GUI project.
#fltk = "1.5.22"

# Audio backend - cross-platform real-time audio
# Using the maintained fork which fixes compatibility with newer glibc
# Renamed to 'miniaudio' for cleaner imports
miniaudio = { package = "om-fork-miniaudio", version = "0.12.2" }

# Random number generation - for noise synthesis and future features
rand = "0.9.2"

# Rust Programming Language utilities
trpl = "0.3.0"

# Don't need features 

