[package]
name = "muSickBeets"
version = "0.1.0"
edition = "2024"
description = "A CSV-driven music tracker synthesizer with real-time audio synthesis and FFT spectrogram analyzer"
authors = ["Jon Stokes ( mightey man )"]
license = "MIT"
default-run = "fft_analyzer"


[[bin]]
name = "tracker"
path = "src/tracker/main.rs"

[[bin]]
name = "fft_analyzer"
path = "src/fft_analyzer/main_fft.rs"

[[bin]]
name = "test_audio_gen"
path = "src/fft_analyzer/test_audio_gen.rs"


[dependencies]
hound = "3.5.1"
csv = "1.4.0"
realfft = "3.5.0"
rustfft = "6.4.1"
rayon = "1.11.0"

# Error handling - provides better error messages and context
anyhow = "1.0.100"


# GUI framework - fast, lightweight, cross-platform
fltk = "1.5.22"


# Audio backend - cross-platform real-time audio
# Using the maintained fork which fixes compatibility with newer glibc
# Renamed to 'miniaudio' for cleaner imports
miniaudio = { package = "om-fork-miniaudio", version = "0.12.2" }

# Random number generation - for noise synthesis and future features
rand = "0.9.2"


# Rust Programming Language utilities
trpl = "0.3.0"
image = "0.25.9"


